--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -4,9 +4,9 @@
     <li> 
         <h2>Nombre del producto: {{this.product.title}}</h2>
         <p>Descripción: {{this.product.description}}</p>
-        <p>Precio: {{this.product.price}}</p>
         <p>Categoria: {{this.product.category}}</p>
-        <p>Stock: {{this.product.Stock}}</p>
+        <p>Stock: {{this.product.stock}}</p>
+        <p>Precio: {{this.product.price}}</p>
         <p>Cantidad: {{this.quantity}}</p>
     </li>
     {{/each}}
