--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,13 +2,14 @@
 
 <div>
     <h1>Productos</h1>
-    {{#each docs}}
+    {{#each products}}
     <div>
         <li>
-            <h2>{{this.title}}</h2>
+            <h2>★━━━━★ {{this.title}} ★━━━━★</h2>            
             <p>{{this.description}}</p>
             <p>Precio: {{this.price}}</p>
             <p>Categoría: {{this.category}}</p>
+            <p>Stock: {{this.stock}}</p>            
             <button onclick="addToCart('{{this._id}}')">Agregar al carrito</button>
         </li>
     </div>
