--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,18 +2,19 @@
 
 <div>
     <h1>Productos</h1>
+
     {{#each products}}
-    <div>
-        <li>
-            <h2>★━━━━★ {{this.title}} ★━━━━★</h2>            
+        <div>
+            <h2>★━━━━★ {{this.title}} ★━━━━★</h2>
             <p>{{this.description}}</p>
-            <p>Precio: {{this.price}}</p>
             <p>Categoría: {{this.category}}</p>
-            <p>Stock: {{this.stock}}</p>            
-            <button onclick="addToCart('{{this._id}}')">Agregar al carrito</button>
-        </li>
-    </div>
-    <br />
+            <p>Stock: {{this.stock}}</p>
+            <form action="/cart/{{../cartId}}/add/{{this._id}}" method="post">
+                <label for="quantity">Cantidad:</label>
+                <input type="number" id="quantity" name="quantity" min="1" max="{{this.stock}}" required>
+                <button type="submit">Agregar al carrito</button>
+            </form>
+        </div>
     {{/each}}
 </div>
 <br />
@@ -37,6 +38,8 @@
 {{else}}
     <h1>No hay Productos para mostrar</h1>
 {{/if}}
+
+
 
 
 
