Agregado botón para vaciar carrito en la vista de carrito

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -30,3 +30,7 @@
         <button type="submit">Comprar</button>
     </form>
 </div>
+<div>
+    <form action="/cart/{{cartId}}/empty" method="post">
+        <button type="submit">Vaciar carrito</button>
+</div>
