Corregir capitalización del botón "Vaciar carrito" en la vista del carrito

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -32,5 +32,5 @@
 </div>
 <div>
     <form action="/cart/{{cartId}}/empty" method="post">
-        <button type="submit">Vaciar carrito</button>
+        <button type="submit">Vaciar Carrito</button>
 </div>
