Agregado botón para editar producto en la vista de productos

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -15,6 +15,12 @@
                 <button type="submit">Agregar al carrito</button>
             </form>
         </div>
+        <br />
+        <div>
+            <form action="/products/update/{{this._id}}" method="get">
+                <button type="submit">Editar producto</button>
+            </form>
+        </div>
     {{/each}}
 </div>
 <br />
