Agregado enlace para nuevo producto en la barra de navegación

--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="/products">Productos</a></li>
         <li><a href="/cart">Carrito</a></li>
+        <li><a href="/products/add-product">Nuevo producto</a></li>
         <li><a href="/logout">Cerrar sesión</a></li>
         <li><a href="/login">Iniciar sesión</a></li>
         <li><a href="/register">Registrarse</a></li>
