Agregado botón de volver en las vistas de agregar y editar productos

--- a/src/views/add-product.handlebars
+++ b/src/views/add-product.handlebars
@@ -38,3 +38,8 @@
 
     <button type="submit">Agregar producto</button>
 </form>
+<div>
+    <form action="/products" method="get">
+        <button type="submit">Volver</button>
+    </form>
+</div>
