--- a/src/views/edit-product.handlebars
+++ b/src/views/edit-product.handlebars
@@ -16,3 +16,8 @@
     <br/><br/>
     <button type="submit">Guardar cambios</button>
 </form>
+<div>
+    <form action="/products" method="get">
+        <button type="submit">Volver</button>
+    </form>
+</div>
