Actualizar rutas y vistas de productos para Eliminar producto

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -46,6 +46,11 @@
                 <button type="submit">Editar producto</button>
             </form>
         </div>
+        <div>
+            <form action="/products/delete/{{this._id}}" method="post">
+                <button type="submit">Eliminar producto</button>
+            </form>
+        </div>
     {{/each}}
 </div>
 <br />
