Cambiar texto del botón de "Agregar producto" a "Guardar" en la vista de agregar producto

--- a/src/views/add-product.handlebars
+++ b/src/views/add-product.handlebars
@@ -36,7 +36,7 @@
     <input type="text" id="image" name="image" value="{{this.image}}" required pattern="\S+.*" title="La imagen no puede estar vacía.">
     <br/><br/>
 
-    <button type="submit">Agregar producto</button>
+    <button type="submit">Guardar</button>
 </form>
 <div>
     <form action="/products" method="get">
