--- a/src/views/edit-product.handlebars
+++ b/src/views/edit-product.handlebars
@@ -14,7 +14,7 @@
     <label for="stock">Stock:</label>
     <input type="number" id="stock" name="stock" value="{{this.stock}}" required min="0" title="El stock no puede ser negativo.">
     <br/><br/>
-    <button type="submit">Guardar cambios</button>
+    <button type="submit">Guardar</button>
 </form>
 <div>
     <form action="/products" method="get">
