--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -1,10 +1,31 @@
-<nav>
-    <ul>
-        <li><a href="/products">Productos</a></li>
-        <li><a href="/cart">Carrito</a></li>
-        <li><a href="/products/add-product">Nuevo producto</a></li>
-        <li><a href="/logout">Cerrar sesión</a></li>
-        <li><a href="/login">Iniciar sesión</a></li>
-        <li><a href="/register">Registrarse</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <h1 class="navbar-brand">ECOMMERCE</h1>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/products">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cart">Carrito</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/products/add-product">Nuevo producto</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Sesión
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/logout">Cerrar sesión</a></li>
+            <li><a class="dropdown-item" href="/login">Iniciar sesión</a></li>
+            <li><a class="dropdown-item" href="/register">Registrarse</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
