--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,79 +1,92 @@
-{{#if isValid}}
-
-<form action="/products" method="get">
-    <label for="query">Buscar:</label>
-    <input type="text" id="query" name="query">
-
-    <label for="category">Categoría:</label>
-    <input type="text" id="category" name="category">
-
-    <label for="status">Estado:</label>
-    <select id="status" name="status">
-        <option value="">Todos</option>
-        <option value="true">Disponible</option>
-        <option value="false">No disponible</option>
-    </select>
-
-    <label for="sort">Ordenar por precio:</label>
-    <select id="sort" name="sort">
-        <option value="">Ninguno</option>
-        <option value="asc">Ascendente</option>
-        <option value="desc">Descendente</option>
-    </select>
-
-    <button type="submit">Filtrar</button>
-</form>
-
-<div>
+{{#if products.length}}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex ms-auto" action="/products" method="get">
+            <input class="form-control me-2" type="search" placeholder="Nombre" id="query" name="query">
+            <input class="form-control me-2" type="text" placeholder="Categoría" id="category" name="category">
+            <select class="form-select me-2" id="status" name="status">
+                <option value="">Todos</option>
+                <option value="true">Disponible</option>
+                <option value="false">No disponible</option>
+            </select>
+            <select class="form-select me-2" id="sort" name="sort">
+                <option value="">Ninguno</option>
+                <option value="asc">Ascendente</option>
+                <option value="desc">Descendente</option>
+            </select>
+            <button class="btn btn-outline-success" type="submit">Filtrar</button>
+        </form>
+    </div>
+</nav>
+<div class="container">
     <h1>Productos</h1>
-
-    {{#each products}}
-        <div>
-            <h2>★━━━━★ {{this.title}} ★━━━━★</h2>
-            <p>{{this.description}}</p>
-            <p>Categoría: {{this.category}}</p>
-            <p>Stock: {{this.stock}}</p>  
-            <p>Precio: $ {{this.price}}</p>
-            <form action="/cart/{{../cartId}}/add/{{this._id}}" method="post">
-                <label for="quantity">Cantidad:</label>
-                <input type="number" id="quantity" name="quantity" min="1" max="{{this.stock}}" required>
-                <button type="submit">Agregar al carrito</button>
-            </form>
+    <div class="row">
+        {{#each products}}
+        <div class="col-sm-3">
+            <div class="card mb-3 shadow-sm">
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="{{this.title}}">
+                <div class="card-body">
+                    <h5 class="card-title">{{this.title}}</h5>
+                    <p class="card-text">{{this.description}}</p>
+                    <p class="text-muted">Precio: ${{this.price}}</p>
+                    <form action="/cart/{{../cartId}}/add/{{this._id}}" method="post">
+                        <div class="input-group">
+                            <span class="input-group-text" id="inputGroup-sizing-default">Cantidad</span>
+                            <input type="number" id="quantity" name="quantity" min="1" max="{{this.stock}}" required class="form-control" aria-label="Cantidad">
+                            <button type="submit" class="btn btn-outline-secondary" id="inputGroupFileAddon04">
+                                <i class="bi bi-cart-fill"></i> Agregar
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <div class="card-footer">
+                    <div class="btn-group">
+                        <div class="px-1">
+                            <form action="/products/update/{{this._id}}" method="get">
+                                <button type="submit" class="btn btn-sm btn-outline-secondary">Editar</button>
+                            </form>
+                        </div>
+                        <div class="px-1">
+                            <form action="/products/delete/{{this._id}}" method="post">
+                                <button type="submit" class="btn btn-sm btn-outline-secondary">Eliminar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <br />
-        <div>
-            <form action="/products/update/{{this._id}}" method="get">
-                <button type="submit">Editar producto</button>
-            </form>
-        </div>
-        <div>
-            <form action="/products/delete/{{this._id}}" method="post">
-                <button type="submit">Eliminar producto</button>
-            </form>
-        </div>
-    {{/each}}
+        {{/each}}
+    </div>
+    <div class="row">
+        <nav aria-label="Page navigation products">
+            <ul class="pagination">
+                {{#if hasPrevPage}}
+                <li class="page-item">
+                <a class="page-link" href="{{this.prevLink}}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+                </li>
+                {{/if}}
+                <li class="page-item disabled"><a class="page-link" href="#">{{this.page}}</a></li>
+                {{#if hasNextPage}}
+                <li class="page-item">
+                <a class="page-link" href="{{this.nextLink}}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+                </li>
+                {{/if}}
+            </ul>
+        </nav>
+        {{else}}
+            <h1>No hay Productos para mostrar</h1>
+        {{/if}}
+    </div>
 </div>
-<br />
 
-<div>
-    {{#if hasPrevPage}}
-    <a href={{this.prevLink}}>
-        << Anterior </a>
-            {{/if}}
 
-            {{!-- numero de pagina --}}
-            &nbsp;
-            {{this.page}}
-            &nbsp;
 
-            {{#if hasNextPage}}
-            <a href={{this.nextLink}}>
-                Siguiente >> </a>
-    {{/if}}
-</div>
-{{else}}
-    <h1>No hay Productos para mostrar</h1>
-{{/if}}
+
+
 
 
 
