--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -26,7 +26,7 @@
                     <p class="card-text">{{this.product.description}}</p>
                     <p class="card-text"><small class="text-muted">Precio: ${{this.product.price}}</small></p>
                     <p class="card-text">Cantidad: {{this.quantity}}</p>
-                    <p class="card-text">Subtotal: ${{multiply this.product.price this.quantity}}</p>
+                    <p class="card-text">Subtotal: ${{this.subtotal}}</p>
                     <div class="d-flex justify-content-between">
                         <div class="col-sm-4">
                             <div class="input-group">
