--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -24,9 +24,18 @@
                 <div class="card-body">
                     <h5 class="card-title">{{this.product.title}}</h5>
                     <p class="card-text">{{this.product.description}}</p>
-                    <p class="card-text"><small class="text-muted">Precio: ${{this.product.price}}</small></p>
-                    <p class="card-text">Cantidad: {{this.quantity}}</p>
-                    <p class="card-text">Subtotal: ${{this.subtotal}}</p>
+                    <div class="row">
+                        <div class="col-4">
+                            <p class="card-text">Cantidad: {{this.quantity}}</p>
+                        </div>
+                        <div class="col-4">
+                            <p class="card-text"><small class="text-muted">Precio: ${{this.product.price}}</small></p>
+                        </div>
+                        <div class="col-4">
+                            <p class="card-text">Subtotal: ${{this.subtotal}}</p>
+                        </div>
+                    </div>
+                    <br>
                     <div class="d-flex justify-content-between">
                         <div class="col-sm-4">
                             <div class="input-group">
