--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -36,7 +36,7 @@
             <p>Precio: $ {{this.price}}</p>
             <form action="/cart/{{../cartId}}/add/{{this._id}}" method="post">
                 <label for="quantity">Cantidad:</label>
-                <input type="number" id="quantity" name="quantity" min="1" max="{{this.stock}}" required>
+                <input type="number" id="quantity" name="quantity" min="1" max="{{this.stock}}" value="1" required>
                 <button type="submit">Agregar al carrito</button>
             </form>
         </div>
